[project]
name = "nonebot_plugin_github_release_notifier"
version = "0.1.0"
description = "A plugin for nonebot & onebot to notify group members of new commits, issues, and PRs in GitHub repos."
authors =  [
  { name="HTony03", email="HTony03@foxmail.com" },
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/HTony03/nonebot_plugin_github_release_notifier"
repository = "https://github.com/HTony03/nonebot_plugin_github_release_notifier"
keywords = ["nonebot", "github", "qqbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Plugins",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[project.dependencies]
httpx = "~=0.28.1"
nonebot-adapter-onebot = "~=2.4.6"
nonebot-plugin-apscheduler = "~=0.3.0"
nonebot2 = "~=2.3.0"
pydantic = "~1.10"
requests = "~=2.30.0"